--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1598,7 +1598,7 @@ colors
   left: 30px !important;
   right: auto !important;
   bottom: 30px !important;
-  z-index: 1100;
+  z-index: 997;
   display: flex;
   flex-direction: column;
   gap: 12px;
